use Interger.valueOf